# StackWalker

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  appveyor.yml
Main/StackWalker/: .gitignore  StackWalker.cpp  StackWalker.h  StackWalker_VC2010.sln  StackWalker_VC2010.vcxproj  StackWalker_VC2015.sln  StackWalker_VC2015.vcxproj  StackWalker_VC2017.sln  StackWalker_VC2022.sln  StackWalker_VC2022.vcxproj  StackWalker_VC70.vcproj  StackWalker_VC9.sln  main.cpp  makefile
Releases/StackWalker_2009-11-01/StackWalker/: StackWalker_VC5.dsw  StackWalker_VC6.dsp  StackWalker_VC8.vcproj
Releases/StackWalker_2011-05-19/StackWalker/: StackWalker_VC70.sln  StackWalker_VC71.vcproj  StackWalker_VC8.sln  makefile
Releases/StackWalker_2013-07-15/StackWalker/: StackWalker.cpp  StackWalker_VC2010.vcxproj.filters  StackWalker_VC5.dsp  StackWalker_VC6.dsw  StackWalker_VC71.sln  StackWalker_VC9.vcproj  main.cpp
